[package]
name = "limone"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Limine"
readme = "README.md"
documentation = "https://docs.rs/limone"
repository = "https://github.com/piuma-os/limone"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]


[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-none",
    "aarch64-unknown-none",
    "riscv64gc-unknown-none-elf",
    "loongarch64-unknown-none",
]
